# jokehub

./: .dockerignore  .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml
backend/lib/: Cargo.toml
backend/lib/src/: lib.rs
backend/migrations/2022-05-05-060439_joke/: down.sql  up.sql
backend/src/: errors.rs  lib.rs  main.rs  schema.rs
backend/src/db/: errors.rs  joke_repository.rs  mod.rs  redis.rs  redis_connection.rs
backend/src/db/mongo/: account.rs  mod.rs  shrimp.rs  varys.rs
backend/src/db/sqlstore/: joke_repository.rs  mod.rs
backend/src/model/: account.rs  anecdote.rs  joke.rs  mod.rs  punch.rs  shrimp.rs
backend/src/server/: account_handler.rs  account_handlers.rs  anecdote_handler.rs  base_handler.rs  config.rs  errors.rs  favorite_handler.rs  helper.rs  joke_handler.rs  lingua.rs  mod.rs  ping_handler.rs  punch_handler.rs  punch_handlers.rs  random_handler.rs  response.rs  shrimp_handler.rs
backend/src/server/tests/: common.rs  mod.rs  ping_handler.rs  ping_handler_test.rs  punch_handler_test.rs
backend/tests/: account_handler_test.rs  anecdote_handler_test.rs  joke_handler_test.rs  ping_handler_test.rs  punch_handler_test.rs  random_handler_test.rs  shrimp_handler_test.rs
backend/tests/common/: accounts.rs  anecdote.rs  joke.rs  mod.rs  punch.rs
ci/docker/: backend.Dockerfile  docker-compose.test.yml  docker-compose.yml
ci/nginx/conf.d/: custom-nginx  default.conf
ci/tools/: mongodb_init.sh  mongodb_test_init.sh
docker/: .env.example  backend.Dockerfile  docker-compose.local.yml  docker-compose.test.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: container.tsx  layout.tsx
frontend/icons/: light_bulb.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  registration.tsx
frontend/styles/: globals.css
frontend/types/: account.ts  base.ts
scripts/: 02-nodejs.sh  create_env.sh  create_test_env.sh  nodejs_install.pm  run_tests.sh
tools/: 01-init.sh  02-nodejs.sh  mongodb_init.sh  mongodb_test_init.sh  postgresql_init.sh
