[package]
name = "jokehub"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
regex = "1"
rust-argon2 = "1.0"
bson = { version = "2", features = ["chrono-0_4", "serde_with", "uuid-0_8"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
rand = "0.8.4"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
jsonwebtoken = "7.2.0"


[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid"]

[dev-dependencies]
once_cell = "1.9.0"